# my_noxim

./: .gitignore  CMakeLists.txt  claude.md  compile_commands.json  run_tests
config_examples/: acclerator.yaml  base_workload.yaml  design_workload.yaml  hirearchy.yaml  multicast_workload.yaml  test_workload.yaml  workload.yaml
config_examples/alexnet/: 0.output  0_1.yaml  0_2.yaml  7.j2  7.output  7.yaml  7_0.yaml  7_1.yaml
config_examples/mobilebert/: 0.yaml  0_0.yaml  0_1.yaml  0_output  1.txt  1.yaml  1_0.yaml  1_1.yaml  1_2.yaml  1_output  6.j2  6.yaml  6_1.yaml  6_2.yaml  6_3.yaml  6output
config_examples/mobilebert/layer0/: 0.yaml  0_0.yaml  0_1.yaml  output.txt
config_examples/vgg16/layer0/: 0.yaml  0_1.yaml  0_2.yaml  output.txt
doc/book/: book.toml
doc/book/book/: 404.html  Buffer.html  Channel.html  DataStructs.html  GlobalParams.html  GlobalRoutingTable.html  GlobalTrafficTable.html  Hub.html  Main.html  ProcessElement.html  ReservationTable.html  Router.html  Tile.html  TokenRing.html  Utils.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
doc/book/src/: Buffer.md  Channel.md  DataStructs.md  GlobalParams.md  GlobalRoutingTable.md  GlobalTrafficTable.md  Hub.md  Main.md  ProcessElement.md  ReservationTable.md  Router.md  SUMMARY.md  Tile.md  TokenRing.md  Utils.md
other/setup/: CMakeLists.txt
src/: Buffer.cpp  Buffer.h  ConfigurationManager.cpp  ConfigurationManager.h  DataStructs.h  DataTypes.h  GlobalParams.cpp  GlobalParams.h  GlobalStats.cpp  GlobalStats.h  HierarchicalTopologyManager.cpp  HierarchicalTopologyManager.h  Hub.cpp  Hub.h  Main.cpp  MockPE.cpp  MockPE.h  NoC.cpp  NoC.h  Power.cpp  Power.h  ProcessingElement.cpp  ProcessingElement.h  ReservationTable.cpp  ReservationTable.h  Router.cpp  Router.h  Stats.cpp  Tile.cpp  Tile.h  Utils.h
src/routingAlgorithms/: Routing_XY.cpp
src/smartbuffer/: BufferManager.cpp  BufferManager.h  ScheduleFactory.cpp  ScheduleFactory.h  run_tests  test_buffer_manager.cpp
src/taskmanager/: ConfigParser.h  TaskManager.cpp  TaskManager.h  WorkloadStructs.h
test/: BufferManager_test.cpp
tests/: Testbench.h  test_ConfigParser.cpp  test_PE_smoke_test.cpp  test_TaskManager.cpp  test_glb_tile.cpp  test_hierarchical.cpp  test_reservation_table.cpp
